Fix alignment

--- a/carpool/css/generated.css
+++ b/carpool/css/generated.css
@@ -4,59 +4,59 @@
 }
 
 #carpool .c-1 {
-    width: 1em;
+    width: 14px;
 }
 
 #carpool .c-2 {
-    width: 2em;
+    width: 28px;
 }
 
 #carpool .c-3 {
-    width: 3em;
+    width: 42px;
 }
 
 #carpool .c-4 {
-    width: 4em;
+    width: 56px;
 }
 
 #carpool .c-5 {
-    width: 5em;
+    width: 70px;
 }
 
 #carpool .c-6 {
-    width: 6em;
+    width: 84px;
 }
 
 #carpool .c-7 {
-    width: 7em;
+    width: 98px;
 }
 
 #carpool .c-8 {
-    width: 8em;
+    width: 112px;
 }
 
 #carpool .c-9 {
-    width: 9em;
+    width: 126px;
 }
 
 #carpool .c-10 {
-    width: 10em;
+    width: 140px;
 }
 
 #carpool .c-11 {
-    width: 11em;
+    width: 154px;
 }
 
 #carpool .c-12 {
-    width: 12em;
+    width: 168px;
 }
 
 #carpool .c-13 {
-    width: 13em;
+    width: 182px;
 }
 
 #carpool .c-14 {
-    width: 14em;
+    width: 196px;
 }
 
 #carpool .c-15 {
@@ -72,7 +72,7 @@
 }
 
 #carpool .c-18 {
-    width: 18em;
+    width: 252px;
 }
 
 #carpool .c-19 {
@@ -204,39 +204,39 @@
 }
 
 #carpool .c-51 {
-    width: 51em;
+    width: 714px;
 }
 
 #carpool .c-52 {
-    width: 52em;
+    width: 728px;
 }
 
 #carpool .c-53 {
-    width: 53em;
+    width: 742px;
 }
 
 #carpool .c-54 {
-    width: 54em;
+    width: 756px;
 }
 
 #carpool .c-55 {
-    width: 55em;
+    width: 770px;
 }
 
 #carpool .c-56 {
-    width: 56em;
+    width: 784px;
 }
 
 #carpool .c-57 {
-    width: 57em;
+    width: 798px;
 }
 
 #carpool .c-58 {
-    width: 58em;
+    width: 812px;
 }
 
 #carpool .c-59 {
-    width: 59em;
+    width: 826px;
 }
 
 #carpool .c-60 {
@@ -408,59 +408,59 @@
 }
 
 #carpool .r-1 {
-    height: 1em;
+    height: 14px;
 }
 
 #carpool .r-2 {
-    height: 2em;
+    height: 28px;
 }
 
 #carpool .r-3 {
-    height: 3em;
+    height: 42px;
 }
 
 #carpool .r-4 {
-    height: 4em;
+    height: 56px;
 }
 
 #carpool .r-5 {
-    height: 5em;
+    height: 70px;
 }
 
 #carpool .r-6 {
-    height: 6em;
+    height: 84px;
 }
 
 #carpool .r-7 {
-    height: 7em;
+    height: 98px;
 }
 
 #carpool .r-8 {
-    height: 8em;
+    height: 112px;
 }
 
 #carpool .r-9 {
-    height: 9em;
+    height: 126px;
 }
 
 #carpool .r-10 {
-    height: 10em;
+    height: 140px;
 }
 
 #carpool .r-11 {
-    height: 11em;
+    height: 154px;
 }
 
 #carpool .r-12 {
-    height: 12em;
+    height: 168px;
 }
 
 #carpool .r-13 {
-    height: 13em;
+    height: 182px;
 }
 
 #carpool .r-14 {
-    height: 14em;
+    height: 196px;
 }
 
 #carpool .r-15 {
@@ -476,7 +476,7 @@
 }
 
 #carpool .r-18 {
-    height: 18em;
+    height: 252px;
 }
 
 #carpool .r-19 {
@@ -608,39 +608,39 @@
 }
 
 #carpool .r-51 {
-    height: 51em;
+    height: 714px;
 }
 
 #carpool .r-52 {
-    height: 52em;
+    height: 728px;
 }
 
 #carpool .r-53 {
-    height: 53em;
+    height: 742px;
 }
 
 #carpool .r-54 {
-    height: 54em;
+    height: 756px;
 }
 
 #carpool .r-55 {
-    height: 55em;
+    height: 770px;
 }
 
 #carpool .r-56 {
-    height: 56em;
+    height: 784px;
 }
 
 #carpool .r-57 {
-    height: 57em;
+    height: 798px;
 }
 
 #carpool .r-58 {
-    height: 58em;
+    height: 812px;
 }
 
 #carpool .r-59 {
-    height: 59em;
+    height: 826px;
 }
 
 #carpool .r-60 {
@@ -1103,11 +1103,11 @@
 }
 
 #carpool .pt-11 {
-    padding-top: 11em;
+    padding-top: 154px;
 }
 
 #carpool .pt-12 {
-    padding-top: 12em;
+    padding-top: 168px;
 }
 
 #carpool .pb-1 {
